--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: A short tagline about you.
 theme: jekyll-theme-cayman
 
 # Site settings
-url: https://dusto-ai.github.io/dusto-ai/
-baseurl: ""  # keep empty for user site (username.github.io). For project sites, set to "/repo-name".
+url: https://dusto-ai.github.io
+baseurl: "/dusto-ai"  # keep empty for user site (username.github.io). For project sites, set to "/repo-name".
 permalink: /blog/:year/:month/:day/:title/
 
 # Social (optional; show/hide in templates as you customize)
